@startuml
skinparam classAttributeIconSize 0
hide circle

class GroceryList {
    +addGrocery(grocery: Grocery)
    +removeGrocery(name: String)
    +getGrocery(name: String)
    +edit...()
    +findGroceries(key: String)
    +viewGrocery(grocery: String)
    +listGroceries()
    +listLowStocks()
    +sortByCost()
    +sortByCategory()
    +sortByExpiration()
}
note left: Each Grocery field can be\nedited using its respective edit...()

class Grocery {
    -name: String
    -amount: int
    -threshold: int
    -expiration: LocalDate
    -category: String
    -unit: String
    -cost: double
    -rating: int
    -review: String
    -remark: String
    -isSetCost: boolean
    -isSetAmount: boolean

    +Grocery(name: String, amount: int, threshold: int, expiration: LocalDate, category: String, cost: double, location: Location)
    +isLow(): boolean
    +printGrocery(): String
    +toSaveFormat(): String
}

class Location {
    -name: String
    +addGrocery(grocery: Grocery)
    +removeGrocery(grocery: Grocery)
    +listGroceries()
    +clearLocation()
}

class LocationList {
    +addLocation(name: String)
    +removeLocation(name: String)
    +findLocation(name: String)
    +listLocation()
}

GroceryList "1" --> "*" Grocery : stores >
LocationList "1" -> "*" Location : contains >
Grocery "*" <---> "1" Location : stored in >

@enduml